implemented UpdatePersonalDetails function and test files